Fixes to button and inputs on mobile.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1035,6 +1035,7 @@ button.blog-search-submit-button, .widget.signupform button, .widget.profile but
                 width: 25%;
                 @media @mobile {
                     left: 0;
+                    margin-left: 0;
                     margin-top: 10px;
                     width: 100%;
                 }
